<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    tools:context="com.squadro.squadsapp.LogIn">
    <LinearLayout
        android:id="@+id/layout_a"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:background="@color/maincolor">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@drawable/squadsapplogo"
            android:contentDescription="@string/applogo"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_b"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/layout_a"
        android:layout_above="@id/layout_c">

        <EditText
            android:id="@+id/txtUsername_login"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/blackforeground"
            android:background="@drawable/edittext_style"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:maxLength="15"
            android:padding="10dp"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/txtPassword_login"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:maxLength="15"
            android:textColor="@color/blackforeground"
            android:fontFamily="@font/roboto"
            android:background="@drawable/edittext_style"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:background="@drawable/buttons_style"
            android:textColor="@color/whiteforeground"
            android:text="@string/login"/>
        <Button
            android:id="@+id/btnLostpassword"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/maincolor"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:background="@android:color/transparent"
            android:text="@string/lostyourpassword"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_c"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/greyforeground"
            android:text="@string/donthaveanaccount"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/roboto"
            android:background="@android:color/transparent"
            android:textColor="@color/maincolor"
            android:text="@string/register"/>
    </LinearLayout>
</RelativeLayout>
