<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteforeground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/maincolor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/pacifico"
            android:text="@string/register"
            android:textColor="@color/whiteforeground"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txtName"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:inputType="textCapSentences"
            android:maxLength="22"
            android:textColor="@color/blackforeground"
            android:fontFamily="@font/roboto"
            android:background="@drawable/edittext_style"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:maxLength="25"
            android:textColor="@color/blackforeground"
            android:fontFamily="@font/roboto"
            android:background="@drawable/edittext_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:maxLength="15"
            android:textColor="@color/blackforeground"
            android:fontFamily="@font/roboto"
            android:background="@drawable/edittext_style"
            android:hint="@string/phonenumber"
            android:inputType="number"/>
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:textColor="@color/blackforeground"
            android:inputType="text"
            android:maxLength="15"
            android:background="@drawable/edittext_style"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/blackforeground"
            android:layout_marginTop="10dp"
            android:maxLength="15"
            android:background="@drawable/edittext_style"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/blackforeground"
            android:layout_marginTop="10dp"
            android:maxLength="15"
            android:background="@drawable/edittext_style"
            android:inputType="textPassword"
            android:hint="@string/confirmpassword"/>
        <Button
            android:id="@+id/btnRegisterR"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:textAllCaps="false"
            android:background="@drawable/buttons_style"
            android:textColor="@color/whiteforeground"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>
