<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/maincolor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/changepassword"
            android:layout_centerInParent="true"
            android:textColor="@color/whiteforeground"
            android:textSize="25sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="40dp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:background="@drawable/edittext_style"
            android:hint="@string/newpassword"/>
        <EditText
            android:id="@+id/txtConfirmNewPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:background="@drawable/edittext_style"
            android:hint="@string/confirmnewpassword"/>
        <Button
            android:id="@+id/btnConfrim"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:background="@drawable/buttons_style"
            android:textColor="@color/whiteforeground"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
