<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/maincolor"
                android:layout_gravity="center"
                android:text="@string/from"/>
            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:textColor="@color/blackforeground"
                android:text="@string/showtext" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/maincolor"
                android:text="@string/destination"/>
            <TextView
                android:id="@+id/tvDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/blackforeground"
                android:layout_marginStart="5dp"
                android:text="@string/showtext" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/maincolor"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/blackforeground"
                android:layout_marginStart="5dp"
                android:text="@string/showtext" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/maincolor"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/blackforeground"
                android:layout_marginStart="5dp"
                android:text="@string/showtext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/maincolor"
                android:text="@string/seats"/>
            <TextView
                android:id="@+id/tvSeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/blackforeground"
                android:layout_marginStart="5dp"
                android:text="@string/showtext"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>