<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/maincolor"
            android:layout_gravity="center"
            android:text="@string/nameview"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/blackforeground"
            android:text="@string/showtext" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/maincolor"
            android:layout_gravity="center"
            android:text="@string/phonenumberview"/>
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/blackforeground"
            android:text="@string/showtext" />
    </LinearLayout>
</LinearLayout>